--- a/ignisApp/index.html
+++ b/ignisApp/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="ignis.svg" />
+  <link rel="icon" type="image/png" href="/ignis-logo.png" />
   <link rel="manifest" href="/manifest.webmanifest" />
   <meta name="theme-color" content="#3b1721" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ignisapp</title>
+    <title>Ignis App</title>
   </head>
   <body>
     <div id="root"></div>
